--- a/src/posts/Q4.md
+++ b/src/posts/Q4.md
@@ -4,7 +4,7 @@ description: Musing on this time of year
 categories: [gender, art]
 date: '2024-11-11'
 edited: '2024-11-11'
-published: false
+published: true
 ---
 
 # Q4
