--- a/src/posts/Q4.md
+++ b/src/posts/Q4.md
@@ -1,6 +1,6 @@
 ---
 title: Q4
-description: Musing on this time of year
+description: Musing on this time of year, rambling about transition and skin.
 categories: [gender, art]
 date: '2024-11-11'
 edited: '2024-11-11'
@@ -9,19 +9,19 @@ published: true
 
 # Q4
 
-This time of year is a weird one for me, pretty melancholic and always insanely hectic. It seems life likes to stack major events around now. The post is going to be pretty rambly.
+This time of year is a weird one for me, pretty melancholic and always insanely hectic. It seems life likes to stack major events around now. The post is going to be some pretty rambly reflection on things.
 
 ## Hormones
 
 I started HRT five years ago now. Well kind of, I started blockers. Cyproterone acetate, 12.5mg, once a day.
 
-It was the culmination of several years of considering, avoiding, considering, and navigating the medical system to find out how. In the end I realised I could just stop after a short period if I didn't like it. I started on blockers only because of that reason. 
+It was the culmination of several years of considering, avoiding, considering, and eventually navigating the medical system to find out how. In the end I realised I could just stop after a short period if I didn't like it. I started on blockers only because of that reason. 
 
-I stopped not long after for a period, apparently I was very sensitive to this particular medication and experienced pretty significant breast growth after only a few weeks. Panicking because I was scared at how the world would treat me if I was visibly trans. The changes reverse fairly quickly too, enough to make me realise I did actually want to do this, and so I started on estrogen too. 
+I stopped not long after for a period, apparently I was very sensitive to this particular medication and experienced pretty significant breast growth after only a few weeks. Panicking because I was terrified at how the world would treat me if I was visibly trans. The changes reverse fairly quickly too, enough to make me realise I did actually want to do this, and so I started on estrogen too. 
 
 I was lucky enough to have some incredible GP's at the time, one who was even open to me bringing in recent medical journals detailing effects of different medications and trialling them with me. Eventually, over the course of several years I have wound up on a regimen that would generally considered to be in line with a person targeting a goal of womanhood. 
 
-My life has changed significantly since i took my first dose, and I'm changed as a result. I think its foolish to believe that you come out of transition as the same person who went in, just with softer skin and breasts. The act of altering your body will change the way you perceive yourself, the way others perceive you, and as a result, the way you interact with society. 
+My life has changed significantly since i took my first dose, and I'm changed as a result. I think its foolish to believe that you come out of transition as the same person who went in, just with softer skin and breasts. The act of altering your body will change the way you perceive yourself, the way others perceive you, and as a result, the way you interact with society. I was definitely foolish.
 
 In the time since I started, I've made and lost friends, bought a house, sold a house, bought another house, lost a partner, found a partner. I've kindled relationships, some that have burnt out spectacularly, and others that have grown into a comforting warmth. I've hurt and in turn been hurt by others. I don't think I've ever felt the grief of a lost childhood that many trans people talk about, but i have still grieved. So much of my life since then has been grief.  For a version of me that doesn't exist, for a life that could have been. Lesser, shrunken, but simpler.
 
@@ -33,7 +33,7 @@ I'm often asked what my tattoos mean, and its a question that I usually don't an
 
 However, one of them is deeply personal in a way that is hard to articulate. The closest I can get to is that the act of having my skin marked is what imbues it with meaning. It usually gets worked on once a year, around this time. My artist starts drawing on me with a pen, I give her an opinion, she makes adjustments, and then she starts tattooing. When i first started discussing the concept, I had a vision of how it would look, it doesn't look like that. Its not yet finished, but I suppose i'm not either. 
 
-What started as plans for a medium shoulder piece, has grown to include my head, back, arm, and leg, encompassing almost the entire right side of my body. The piece itself is abstract, the only colour used is black.  Thick lines curve around my body, breaking up huge panels of solid black, all contrasting against skin that rarely sees sun. 
+What started as plans for a medium shoulder piece, has grown to include my head, back, arm, and leg, encompassing almost the entire right side of my body. The piece itself is abstract, the only colour used is black. Thick lines curve around my body, breaking up huge panels of solid black, all contrasting against pale skin that rarely sees sun. 
 
 While I didn't set out for this piece to represent my experience with transition, over time it has ended up doing so. The process has irreversibly scarred me. Life events that caused me to neglect proper aftercare have left parts my skin damaged and changed beyond just the layer of ink. I can run my hand along parts of the tattoo, feeling the rough texture of the scar tissue jutting out from the surrounding skin. Physical marks left as reminders of sudden upheavals in my life.
 
