--- a/src/posts/Q4.md
+++ b/src/posts/Q4.md
@@ -33,7 +33,9 @@ I'm often asked what my tattoos mean, and its a question that I usually don't an
 
 However, one of them is deeply personal in a way that is hard to articulate. The closest I can get to is that the act of having my skin marked is what imbues it with meaning. It usually gets worked on once a year, around this time. My artist starts drawing on me with a pen, I give her an opinion, she makes adjustments, and then she starts tattooing. When i first started discussing the concept, I had a vision of how it would look, it doesn't look like that. Its not yet finished, but I suppose i'm not either. 
 
-What started as plans for a medium shoulder piece, has grown to include my head, back, arm, and leg, encompassing almost the entire right side of my body. The piece itself is abstract, the only colour used is black. Thick lines curve around my body, breaking up huge panels of solid black, all contrasting against pale skin that rarely sees sun. 
+What started as plans for a medium shoulder piece, has grown to include my head, back, arm, and leg, encompassing almost the entire right side of my body. The piece itself is abstract, the only colour used is black. Thick lines curve around my body, breaking up huge panels of solid black, all contrasting against pale skin that rarely sees sun. Sketchy lines trace areas that are yet to be completed, a rough outline of something yet to come. 
+
+There are tiny imperfections here and there, a needle drifting slightly further than its intended boundaries. I don't think anyone other than myself would notice them, but they bring me great joy. A reminder that the work was done by human hands, by an artist with their own experiences that have informed the marks they've left on my flesh.    
 
 While I didn't set out for this piece to represent my experience with transition, over time it has ended up doing so. The process has irreversibly scarred me. Life events that caused me to neglect proper aftercare have left parts my skin damaged and changed beyond just the layer of ink. I can run my hand along parts of the tattoo, feeling the rough texture of the scar tissue jutting out from the surrounding skin. Physical marks left as reminders of sudden upheavals in my life.
 
