--- a/src/posts/Q4.md
+++ b/src/posts/Q4.md
@@ -1,5 +1,6 @@
 ---
 title: Q4
+filename: Q4
 description: Musing on this time of year, rambling about transition and skin.
 categories: [gender, art]
 date: '2024-11-11'
